<resources>
    <!-- Main app name -->
    <string name="app_name">Magikarp</string>

    <!-- Main Navigation Menu Items -->
    <string name="menu_help">Help</string>
    <string name="menu_login">Sign in</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_maps">Map</string>
    <string name="menu_my_locations">My locations</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_settings">Settings</string>

    <!-- Taskbar menu items -->
    <string name="menu_new_post">New post</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_terms_of_service">Terms of service</string>

    <!-- Navigation UI Display Titles -->
    <string name="title_fragment_blank">Test</string>
    <string name="title_fragment_edit_post">Edit post</string>
    <string name="title_fragment_help">Help</string>
    <string name="title_fragment_login">Sign in</string>
    <string name="title_fragment_maps">Map</string>
    <string name="title_fragment_my_posts">My posts</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_view_post">View post</string>

    <!-- Post editor UI -->
    <string name="upload_post">Upload post</string>
    <string name="create_new_post">Create new post</string>
    <string name="image_preview">Image preview</string>
    <string name="get_directions">Get directions</string>
    <string name="get_location">Get location</string>

    <!-- Settings UI -->
    <string name="max_records">Records</string>
    <string name="max_records_description">Maximum records to display</string>

    <!-- Help UI -->
    <string name="text_call">Call</string>
    <string name="text_email">Email</string>


    <!-- TODO: Everything below here was created by auto-generated templates -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>