<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_maps">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.magikarp.android.ui.login.LoginFragment"
        android:label="@string/title_fragment_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.magikarp.android.ui.maps.MapsFragment"
        android:label="@string/title_fragment_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/create_post"
        android:name="com.magikarp.android.ui.posts.PostFragment"
        android:label="Create Post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.magikarp.android.ui.app.SettingsFragment"
        android:label="@string/title_fragment_settings"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.magikarp.android.ui.app.HelpFragment"
        android:label="@string/title_fragment_help"
        tools:layout="@layout/fragment_blank" />

</navigation>